--- a/lab19/lib/l10n/intl_en.arb
+++ b/lab19/lib/l10n/intl_en.arb
@@ -1,6 +1,6 @@
 {
    "@@last_modified": "2019-04-19T02:04:09.627551",
-   "title": "Lesson 19",
+   "title": "Lab 19",
    "@title": {
       "description": "Message for the Demo application",
       "type": "text",
